GHZ state - quantum circuit improved

--- a/GHZ_State.ipynb
+++ b/GHZ_State.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit import *"
+    "from qiskit import *\n",
+    "%matplotlib inline # for circuit visualization"
    ]
   },
   {
@@ -44,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "<qiskit.extensions.standard.cx.CnotGate at 0x1f396819be0>"
+       "<qiskit.extensions.standard.cx.CnotGate at 0x2055f952780>"
       ]
      },
      "execution_count": 3,
@@ -83,7 +84,7 @@
        "                  └───┘</pre>"
       ],
       "text/plain": [
-       "<qiskit.visualization.text.TextDrawing at 0x1f396819eb8>"
+       "<qiskit.visualization.text.TextDrawing at 0x2055f93bb38>"
       ]
      },
      "execution_count": 4,
@@ -95,6 +96,13 @@
     "# to draw the quantum circuit for visualization\n",
     "qcirc.draw()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
